--- a/public/moderator.html
+++ b/public/moderator.html
@@ -92,6 +92,12 @@
                 Lobi Hazır 
                 <span id="lobbyModeBadge" style="font-size: 0.6em; background: var(--accent-color); padding: 2px 8px; border-radius: 10px; vertical-align: middle;">MANUEL</span>
             </h2>
+            
+            <div class="lobby-id-display" style="background: rgba(255, 255, 255, 0.1); padding: 15px; border-radius: 8px; margin: 15px 0; text-align: center;">
+                <div style="font-size: 0.9em; opacity: 0.7; margin-bottom: 5px;">LOBI ID</div>
+                <div id="lobbyIdDisplay" style="font-size: 2em; letter-spacing: 5px; font-weight: bold; color: var(--accent-color); font-family: monospace;">---</div>
+            </div>
+
             <div id="anonymityBadge" style="font-size: 0.8em; margin-top: 5px; color: #aaa;">Gizlilik: Açık</div>
             
             <p>Oyuncular QR kodu okutarak katılabilir.</p>
