Fix: Add Socket.IO CDN fallback for Railway

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,14 @@
 
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- Socket.IO Client Kütüphanesi -->
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        if (typeof io === 'undefined') {
+            document.write('<script src="/socket.io/socket.io.js"><\/script>');
+        }
+    </script>
+    
     <script src="js/player.js"></script>
 </body>
 </html>
