Fix: Dynamic socket connection (Railway/Local vs Netlify)

--- a/public/moderator.html
+++ b/public/moderator.html
@@ -201,14 +201,8 @@
     </div>
 
     <!-- Socket.IO Client Kütüphanesi -->
-    <!-- Önce CDN deneyelim, başarısız olursa local'den çeksin (fallback) -->
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script>
-        if (typeof io === 'undefined') {
-            // CDN yüklenemediyse yerel sunucudan dene
-            document.write('<script src="/socket.io/socket.io.js"><\/script>');
-        }
-    </script>
+    <!-- Fallback REMOVED because it causes error on Netlify -->
     
     <script src="js/moderator.js"></script>
 </body>
