Feat: Public lobby creation (remove admin login)

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
                 <p>Moderatörün paylaştığı QR kodu okutun veya kodu manuel girin.</p>
                 <div style="margin: 20px 0;">
                     <button onclick="showCodeInput()" class="secondary" style="width: 100%; margin-bottom: 10px;">🔑 Kodla Giriş Yap</button>
+                    <button onclick="window.location.href='moderator.html'" class="primary" style="width: 100%; background: #9b59b6;">➕ Lobi Kur</button>
                 </div>
             </div>
 
@@ -27,12 +28,6 @@
                 <input type="text" id="playerName" placeholder="Adınız Soyadınız" maxlength="15">
                 <button onclick="joinGame()">Katıl</button>
                 <button onclick="cancelManualEntry()" class="danger" style="margin-top: 10px; font-size: 0.8em; padding: 5px 10px;">İptal</button>
-            </div>
-            
-            <div style="margin-top: 20px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 15px;">
-                <a href="moderator.html" style="color: var(--text-color); text-decoration: none; font-size: 0.9em; opacity: 0.7;">
-                    ⚙️ Yönetici Girişi
-                </a>
             </div>
         </div>
 
