--- a/public/moderator.html
+++ b/public/moderator.html
@@ -11,16 +11,8 @@
         <!-- Lobiyi Kapat Butonu -->
         <button id="closeLobbyBtn" class="top-right-btn hidden" onclick="closeLobby()">Lobiyi Kapat</button>
 
-        <!-- Giriş Ekranı -->
-        <div id="loginScreen" class="card">
-            <h2>Moderatör Girişi</h2>
-            <input type="text" id="username" placeholder="Kullanıcı Adı">
-            <input type="password" id="password" placeholder="Şifre">
-            <button onclick="login()">Giriş Yap</button>
-        </div>
-
-        <!-- Soru Hazırlama Ekranı -->
-        <div id="setupScreen" class="card hidden">
+        <!-- Soru Hazırlama Ekranı (Varsayılan olarak açık) -->
+        <div id="setupScreen" class="card">
             <h2>Lobi Kurulumu</h2>
             
             <!-- Oyun Modu Seçimi -->
